cleanup speakers a bit

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -145,12 +145,14 @@
             <div class="thumbnail">
               <a href="/speakers/russ-cox"><img src="/images/speakers/russ-cox.png" alt="Russ Cox"></a>
             <div class="caption">
-                <h4><a href="/speakers/russ-cox">Russ Cox</a></h4>
-                <p>Engineer at Google</p>
+                <h4>
+                  <div class="handle">
+                    <a href="http://twitter.com/_rsc"><i class="fa fa-twitter"></i></a>
+                  </div>
+                  <a href="/speakers/russ-cox">Russ Cox</a>
+                </h4>
+                <span class="title">Engineer at Google</span>
                 <p>Russ Cox has worked on the Go programming language at Google since 2008.</p>
-                <div class="handle">
-                  <a href="http://twitter.com/_rsc">@_rsc</a>
-                </div>
               </div>
             </div>
           </div>
@@ -159,10 +161,8 @@
             <a href="/speakers/robert-griesemer"><img src="/images/speakers/robert-griesemer.png" alt="Robert Griesemer"></a>
             <div class="caption">
                 <h4><a href="/speakers/robert-griesemer">Robert Griesemer</a></h4>
-                <p>Engineer at Google</p>
+                <span class="title">Engineer at Google</span>
                 <p>Robert Griesemer is a software engineer at Google, and one of the designers of the Go language.</p>
-                <div class="handle">
-                </div>
               </div>
             </div>
           </div>
@@ -170,11 +170,13 @@
             <div class="thumbnail">
             <a href="/speakers/dmitry-vyukov"><img src="/images/speakers/dmitry-vyukov.jpg" alt="Dmitry Vyukov"></a>
             <div class="caption">
-                <h4><a href="/speakers/dmitry-vyukov">Dmitry Vyukov</a></h4>
-                <p>Engineer at Google</p>
-                <div class="handle">
-                  <a href="http://twitter.com/dvyukov">@dvyukov</a>
-                </div>
+                <h4>
+                  <div class="handle">
+                    <a href="http://twitter.com/dvyukov"><i class="fa fa-twitter"></i></a>
+                  </div>
+                  <a href="/speakers/dmitry-vyukov">Dmitry Vyukov</a>
+                </h4>
+                <span class="title">Engineer at Google</span>
               </div>
             </div>
           </div>
@@ -182,12 +184,14 @@
             <div class="thumbnail">
             <a href="/speakers/andrew-gerrand"><img src="/images/speakers/andrew-gerrand.jpg" alt="Andrew Gerrand"></a>
             <div class="caption">
-                <h4><a href="/speakers/andrew-gerrand">Andrew Gerrand</a></h4>
-                <p>Engineer at Google</p>
+                <h4>
+                  <div class="handle">
+                    <a href="http://twitter.com/ennef"><i class="fa fa-twitter"></i></a>
+                  </div>
+                  <a href="/speakers/andrew-gerrand">Andrew Gerrand</a>
+                </h4>
+                <span class="title">Engineer at Google</span>
                 <p>Andrew Gerrand works on the Go Programming Language at Google Sydney.</p>
-                <div class="handle">
-                  <a href="http://twitter.com/ennef">@ennef</a>
-                </div>
               </div>
             </div>
           </div>
@@ -205,7 +209,7 @@
               <a href="/speakers/baishampayan-ghose"><img src="/images/speakers/baishampayan-ghose.jpg" alt="Baishampayan Ghose"></a>
               <div class="caption">
                 <h4><a href="/speakers/baishampayan-ghose">Baishampayan Ghose</a></h4>
-                <p>Co-founder at Helpshift</p>
+                <span class="title">Co-founder at Helpshift</span>
                 <div class="handle">
                 </div>
               </div>
@@ -216,7 +220,7 @@
               <a href="/speakers/ben-johnson"><img src="/images/speakers/ben-johnson.jpg" alt="Ben Johnson"></a>
               <div class="caption">
                 <h4><a href="/speakers/ben-johnson">Ben Johnson</a></h4>
-                <p>Open source Go developer in databases & distributed systems.</p>
+                <span class="title">Open source Go developer in databases & distributed systems.</p>
                 <div class="handle">
                 </div>
               </div>
@@ -227,7 +231,7 @@
               <a href="/speakers/derek-parker"><img src="/images/speakers/derek-parker.jpg" alt="Derek Parker"></a>
               <div class="caption">
                 <h4><a href="/speakers/derek-parker">Derek Parker</a></h4>
-                <p>Author of <a href="https://github.com/derekparker/delve">Delve</a> an open source debugger for Go</p>
+                <span class="title">Author of <a href="https://github.com/derekparker/delve">Delve</a> an open source debugger for Go</p>
                 <div class="handle">
                 </div>
               </div>
@@ -238,7 +242,7 @@
               <a href="/speakers/hana-kim"><img src="/images/speakers/hana-kim.png" alt="Hana Kim"></a>
               <div class="caption">
                 <h4><a href="/speakers/hana-kim">Hana Kim</a></h4>
-                <p>Software engineer on the Go team at Google.</p>
+                <span class="title">Software engineer on the Go team at Google.</p>
                 <div class="handle">
                 </div>
               </div>
@@ -249,7 +253,7 @@
             <a href="/speakers/peter-bourgon"><img src="/images/speakers/peter-bourgon.jpg" alt="Peter Bourgon"></a>
             <div class="caption">
                 <h4><a href="/speakers/peter-bourgon">Peter Bourgon</a></h4>
-                <p>Engineer at SoundCloud</p>
+                <span class="title">Engineer at SoundCloud</p>
                 <div class="handle">
                 </div>
               </div>
@@ -259,139 +263,152 @@
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+          <div class="speaker col-md-2">
             <div class="thumbnail">
               <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
               <div class="caption">
-                <h4><a href="/speakers">To Be Announced</a></h4>
+                <h4><a href="/speakers">Gopher</a></h4>
+                <span class="title">To be announced</span>
                 <p></p>
                 <div class="handle">
                 </div>
