make footer background white so that it stands out on inner pages

--- a/themes/gophercon/static/css/main.css
+++ b/themes/gophercon/static/css/main.css
@@ -982,7 +982,7 @@ main .hotels .col-md-2 section p:nth-child(n+2) {
 	color: #e1e1e1;
 }
 footer {
-    background: #f6f6f6;
+    background: #fff;
     clear: both;
     padding: 50px 25px;
 }
