additional speaker cleanup

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -197,14 +197,15 @@
           </div>
       </div>
     </section>
-<section id="speakers" class="content speakers">
+    <section id="speakers" class="content speakers">
     	<div class="container">
-        	<div class="text-center">
-                <h1>Speakers</h1>
-                <p class="subheader">&nbsp;</p>
-        	</div>
+        <div class="text-center">
+          <h1>Speakers</h1>
+          <p class="subheader">&nbsp;</p>
+        </div>
 
-          <div class="speaker col-md-2">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="speaker col-md-3">
             <div class="thumbnail">
               <a href="/speakers/baishampayan-ghose"><img src="/images/speakers/baishampayan-ghose.jpg" alt="Baishampayan Ghose"></a>
               <div class="caption">
@@ -215,7 +216,7 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-md-2">
+          <div class="speaker col-md-3">
             <div class="thumbnail">
               <a href="/speakers/ben-johnson"><img src="/images/speakers/ben-johnson.jpg" alt="Ben Johnson"></a>
               <div class="caption">
@@ -226,7 +227,7 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-md-2">
+          <div class="speaker col-md-3">
             <div class="thumbnail">
               <a href="/speakers/derek-parker"><img src="/images/speakers/derek-parker.jpg" alt="Derek Parker"></a>
               <div class="caption">
@@ -237,7 +238,7 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-md-2">
+          <div class="speaker col-md-3">
             <div class="thumbnail">
               <a href="/speakers/hana-kim"><img src="/images/speakers/hana-kim.png" alt="Hana Kim"></a>
               <div class="caption">
@@ -248,7 +249,9 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-md-2">
+        </div>
+        <div class="col-md-10 col-md-offset-1">
+          <div class="speaker col-md-3">
             <div class="thumbnail">
             <a href="/speakers/peter-bourgon"><img src="/images/speakers/peter-bourgon.jpg" alt="Peter Bourgon"></a>
             <div class="caption">
@@ -259,162 +262,18 @@
               </div>
             </div>
           </div>
-          <div class="speaker col-md-2">
+
+          <div class="speaker col-md-3">
             <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">13 to be Announced</a></h4>
+                <span class="title">Keep checking back as there are 13 more gophers to be revealed.</p>
                 <div class="handle">
                 </div>
               </div>
             </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="speaker col-md-2">
-            <div class="thumbnail">
-              <a href="/speakers"><img src="/images/gopher-placeholder.png" alt="..."></a>
-              <div class="caption">
-                <h4><a href="/speakers">Gopher</a></h4>
-                <span class="title">To be announced</span>
-                <p></p>
-                <div class="handle">
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
     </section>
 
