show missing speakers as individual boxes

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -267,12 +267,166 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
             <div class="caption">
-                <h4><a href="/speakers">13 to be Announced</a></h4>
-                <span class="title">Keep checking back as there are 13 more gophers to be revealed.</p>
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
                 <div class="handle">
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-10 col-md-offset-1">
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-10 col-md-offset-1">
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-10 col-md-offset-1">
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="speaker col-md-3">
+            <div class="thumbnail">
+            <a href="/speakers"><img src="/images/gopher.jpg" alt="Speakers"></a>
+            <div class="caption">
+                <h4><a href="/speakers">To be Announced</a></h4>
+                <span class="title">Keep checking back as there are more gophers to be revealed.</p>
+                <div class="handle">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
