--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -267,7 +267,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/barak-michener.jpg" alt="Barak Michener"></a>
             <div class="caption">
-                <h4><a href="/speakers">Barak Michener</a></h4>
+                <h4><a href="/speakers/barak-michener">Barak Michener</a></h4>
                 <span class="title">Backend Developer at CoreOS and lead maintainer of Cayley.</span>
                 <div class="handle">
                 </div>
@@ -279,7 +279,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/kevin-cantwell.jpg" alt="Kevin Cantwell"></a>
             <div class="caption">
-                <h4><a href="/speakers">Kevin Cantwell</a></h4>
+                <h4><a href="/speakers/kevin-cantwell">Kevin Cantwell</a></h4>
                 <span class="title">Lead Architect at Timehop</span>
                 <div class="handle">
                 </div>
@@ -291,7 +291,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/kelsey-hightower.jpg" alt="Kelsey Hightower"></a>
             <div class="caption">
-                <h4><a href="/speakers">Kelsey Hightower</a></h4>
+                <h4><a href="/speakers/kelsey-hightower">Kelsey Hightower</a></h4>
                 <span class="title">Product Manager, Developer and Chief Advocate at CoreOS</span>
                 <div class="handle">
                 </div>
@@ -306,7 +306,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/rick-hudson.jpg" alt="Rick Hudson"></a>
             <div class="caption">
-                <h4><a href="/speakers">Rick Hudson</a></h4>
+                <h4><a href="/speakers/rick-hudson">Rick Hudson</a></h4>
                 <span class="title">Rick is a member of Google's Go team where he is working on Go's GC and runtime issues.</span>
                 <div class="handle">
                 </div>
@@ -319,7 +319,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/kyle-erf.jpg" alt="Kyle Erf"></a>
             <div class="caption">
-                <h4><a href="/speakers">Kyle Erf</a></h4>
+                <h4><a href="/speakers/kyle-erf">Kyle Erf</a></h4>
                 <span class="title">Kyle Erf is a Kernel Tools Engineer at MongoDB</span>
                 <div class="handle">
                 </div>
@@ -331,7 +331,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/sarah-adams.jpg" alt="Sarah Adams"></a>
             <div class="caption">
-                <h4><a href="/speakers">Sarah Adams</a></h4>
+                <h4><a href="/speakers/sarah-adams">Sarah Adams</a></h4>
                 <span class="title">Software Engineer at Sproutling</span>
                 <div class="handle">
                 </div>
@@ -343,7 +343,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/richard-fliam.jpg" alt="Richard Fliam"></a>
             <div class="caption">
-                <h4><a href="/speakers">Richard Fliam</a></h4>
+                <h4><a href="/speakers/richard-fliam">Richard Fliam</a></h4>
                 <span class="title">Software Engineer Lead on Comcast VIPER’s Pillar linear packager</span>
                 <div class="handle">
                 </div>
@@ -357,7 +357,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/sam-helman.png" alt="Sam Helman"></a>
             <div class="caption">
-                <h4><a href="/speakers">Sam Helman</a></h4>
+                <h4><a href="/speakers/sam-helman">Sam Helman</a></h4>
                 <span class="title">Software Engineer at Flatiron Health</span>
                 <div class="handle">
                 </div>
@@ -370,7 +370,7 @@
             <div class="thumbnail">
             <a href="/speakers"><img src="/images/speakers/tomas-senart.jpg" alt="Tomás Senart"></a>
             <div class="caption">
-                <h4><a href="/speakers">Tomás Senart</a></h4>
+                <h4><a href="/speakers/tomas-senart">Tomás Senart</a></h4>
                 <span class="title">Software Engineer and Author of <a href="https://github.com/tsenart/vegeta">Vegeta</a></span>
                 <div class="handle">
                 </div>
