--- a/themes/gophercon/layouts/section/speakers.html
+++ b/themes/gophercon/layouts/section/speakers.html
@@ -11,7 +11,7 @@
                 <img class="avatar img-rounded" src="{{.Params.speakerimage}}" alt="{{.LinkTitle}}" width="150" />
               </div>
               <div class="col-md-9">
-                <h3>{{.LinkTitle}} <br /><small>{{.Params.speakertitle}}</small></h3>
+				  <h3>{{.LinkTitle}} <br /><small>{{.Params.speakertitle}}</small></h3><a href="{{ .Params.talk}}">View Talk</a><br/>
                 {{.Summary}}
                 {{ if .Truncated }} <br/><br/>
                   <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
