--- a/themes/gophercon/layouts/speakers/single.html
+++ b/themes/gophercon/layouts/speakers/single.html
@@ -15,7 +15,8 @@
 				</div>
 				<div class="col-md-9">
           <h3>{{.LinkTitle}}<br /><small>{{.Params.speakertitle}}</small></h3>
-					{{.Content}}
+		  		{{.Content}}
+					<h4><a href="{{ .Params.talk }}">View Talk</a></h4>
 				</div>
 			</div>
         </div><!-- generic col-md-10 -->
