more homepage speaker links

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -265,7 +265,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/barak-michener.jpg" alt="Barak Michener"></a>
+            <a href="/speakers/barak-michener"><img src="/images/speakers/barak-michener.jpg" alt="Barak Michener"></a>
             <div class="caption">
                 <h4><a href="/speakers/barak-michener">Barak Michener</a></h4>
                 <span class="title">Backend Developer at CoreOS and lead maintainer of Cayley.</span>
@@ -277,7 +277,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/kevin-cantwell.jpg" alt="Kevin Cantwell"></a>
+            <a href="/speakers/kevin-cantwell"><img src="/images/speakers/kevin-cantwell.jpg" alt="Kevin Cantwell"></a>
             <div class="caption">
                 <h4><a href="/speakers/kevin-cantwell">Kevin Cantwell</a></h4>
                 <span class="title">Lead Architect at Timehop</span>
@@ -289,7 +289,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/kelsey-hightower.jpg" alt="Kelsey Hightower"></a>
+            <a href="/speakers/kelsey-hightower"><img src="/images/speakers/kelsey-hightower.jpg" alt="Kelsey Hightower"></a>
             <div class="caption">
                 <h4><a href="/speakers/kelsey-hightower">Kelsey Hightower</a></h4>
                 <span class="title">Product Manager, Developer and Chief Advocate at CoreOS</span>
@@ -304,7 +304,7 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/rick-hudson.jpg" alt="Rick Hudson"></a>
+            <a href="/speakers/rick-hudson"><img src="/images/speakers/rick-hudson.jpg" alt="Rick Hudson"></a>
             <div class="caption">
                 <h4><a href="/speakers/rick-hudson">Rick Hudson</a></h4>
                 <span class="title">Rick is a member of Google's Go team where he is working on Go's GC and runtime issues.</span>
@@ -317,7 +317,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/kyle-erf.jpg" alt="Kyle Erf"></a>
+            <a href="/speakers/kyle-erf"><img src="/images/speakers/kyle-erf.jpg" alt="Kyle Erf"></a>
             <div class="caption">
                 <h4><a href="/speakers/kyle-erf">Kyle Erf</a></h4>
                 <span class="title">Kyle Erf is a Kernel Tools Engineer at MongoDB</span>
@@ -329,7 +329,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/sam-helman.png" alt="Sam Helman"></a>
+            <a href="/speakers/sam-helman"><img src="/images/speakers/sam-helman.png" alt="Sam Helman"></a>
             <div class="caption">
                 <h4><a href="/speakers/sam-helman">Sam Helman</a></h4>
                 <span class="title">Software Engineer at Flatiron Health</span>
@@ -341,7 +341,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/sarah-adams.jpg" alt="Sarah Adams"></a>
+            <a href="/speakers/sarah-adams"><img src="/images/speakers/sarah-adams.jpg" alt="Sarah Adams"></a>
             <div class="caption">
                 <h4><a href="/speakers/sarah-adams">Sarah Adams</a></h4>
                 <span class="title">Software Engineer at Sproutling</span>
@@ -355,7 +355,7 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/richard-fliam.jpg" alt="Richard Fliam"></a>
+            <a href="/speakers/richard-fliam"><img src="/images/speakers/richard-fliam.jpg" alt="Richard Fliam"></a>
             <div class="caption">
                 <h4><a href="/speakers/richard-fliam">Richard Fliam</a></h4>
                 <span class="title">Software Engineer Lead on Comcast VIPER’s Pillar linear packager</span>
@@ -367,7 +367,7 @@
 
           <div class="speaker col-md-3">
             <div class="thumbnail">
-            <a href="/speakers"><img src="/images/speakers/tomas-senart.jpg" alt="Tomás Senart"></a>
+            <a href="/speakers/tomas-senart"><img src="/images/speakers/tomas-senart.jpg" alt="Tomás Senart"></a>
             <div class="caption">
                 <h4><a href="/speakers/tomas-senart">Tomás Senart</a></h4>
                 <span class="title">Software Engineer and Author of <a href="https://github.com/tsenart/vegeta">Vegeta</a></span>
