Adding missing speaker titles

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -268,7 +268,7 @@
             <a href="/speakers/barak-michener"><img src="/images/speakers/barak-michener.jpg" alt="Barak Michener"></a>
             <div class="caption">
                 <h4><a href="/speakers/barak-michener">Barak Michener</a></h4>
-                <span class="title">Backend Developer at CoreOS and lead maintainer of Cayley.</span>
+                <span class="title">Backend Developer at CoreOS and lead maintainer of Cayley</span>
                 <div class="handle">
                 </div>
               </div>
