--- a/themes/gophercon/layouts/section/talks.html
+++ b/themes/gophercon/layouts/section/talks.html
@@ -1,27 +1,33 @@
 {{ partial "header.html" . }}
 
-
 <main class="container generic">
-    <section class="row"> 
-		<div class="col-md-8">
-			<h2>GopherCon 2015 Presentations</h2>
-			{{ range .Paginator.Pages }}
-		
-			<h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-			{{ $speakers := .Params.author }}
-			{{ $talks := .Params.speakerpage }}
-			<h4>{{ range $index, $element := .Params.author }}
-				<a href="{{ index $talks $index }}">{{ index $speakers $index }}</a>{{end}}</h4>
-				{{ .Summary }}
-				{{ if .Truncated }} <br/><br/>
-        <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
-				{{ end }}
-			{{ end }}
+  <section class="row"> 
+    <div class="col-md-8">
+      <h2>GopherCon 2015 Presentations</h2>
+      {{ range .Paginator.Pages }}
+        <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+        <p>
+          {{ $speakers := .Params.author }}
+          {{ $speakerimages := .Params.speakerimage }}
+          {{ $talks := .Params.speakerpage }}
+          {{ range $index, $element := .Params.author }}
+          <img class="img-rounded" src="{{ index $speakerimages $index }}" alt="{{ index $speakers $index }}" width="20" align="middle" />&nbsp;
+          <a href="{{ index $talks $index }}" style="color: #777;font-weight: 300; font-size: 16px;">{{ index $speakers $index }}</a>
+          {{ end }}
+        </p>
+        <p>
+          {{ .Summary }}
+          {{ if .Truncated }} <br/><br/>
+            <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
+          {{ end }}
+          <br /><br />
+        </p>
+      {{ end }}
 
-			{{ template "_internal/pagination.html" . }}
-		</div>
-        {{ partial "sidebar.html" . }}
-    </section>
+      {{ template "_internal/pagination.html" . }}
+    </div>
+    {{ partial "sidebar.html" . }}
+  </section>
 </main>
 
 <main>
