fix Sarah's employer

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -344,7 +344,7 @@
             <a href="/speakers/sarah-adams"><img src="/images/speakers/sarah-adams.jpg" alt="Sarah Adams"></a>
             <div class="caption">
                 <h4><a href="/speakers/sarah-adams">Sarah Adams</a></h4>
-                <span class="title">Software Engineer at Sproutling</span>
+                <span class="title">Software Engineer at Restless Bandit</span>
                 <div class="handle">
                 </div>
               </div>
